@@ -1,5 +1,6 @@
 mpdscribble 0.14 - not yet released
   * reformatted the whole source code (indentation with tabs)
+  * support MPD's "idle" command (ignores the "sleep" setting)
 
 
 mpdscribble 0.13 - 2008-12-19
